force-app/main/default/objects/Account/fields/Academic_Organization__c.field-meta.xml
<CustomField>
    <fullName>Academic_Organization__c</fullName>
    <label>Academic Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Organization</valueSetName>
    </valueSet>
</CustomField>