force-app/main/default/objects/Account/fields/Capability_Resources__c.field-meta.xml
<CustomField>
    <fullName>Capability_Resources__c</fullName>
    <label>Capability &amp; Resources</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>