force-app/main/default/objects/Account/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <inlineHelpText>This comes from the membership form in Pardot</inlineHelpText>
    <label>Company Description</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>