force-app/main/default/objects/Account/fields/Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>Congressional_District__c</fullName>
    <label>Congressional District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>