force-app/main/default/objects/Account/fields/Date_of_Reinstatent__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reinstatent__c</fullName>
    <description>A former member that wanted to come back as an IACMI member later on</description>
    <label>Date of Reinstatent</label>
    <type>Date</type>
</CustomField>