force-app/main/default/objects/Account/fields/Duns_Code__c.field-meta.xml
<CustomField>
    <fullName>Duns_Code__c</fullName>
    <label>Duns Code</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>