force-app/main/default/objects/Account/fields/Foreign_Ownership_50__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Ownership_50__c</fullName>
    <label>Foreign Ownership &gt; 50%</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>