force-app/main/default/objects/Account/fields/fw1__Exempt_From_CC_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>fw1__Exempt_From_CC_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt From Credit Card Surcharge</label>
    <type>Checkbox</type>
</CustomField>