force-app/main/default/objects/Account/fields/fw1__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>fw1__NumberofLocations__c</fullName>
    <label>zNumber of Locations - OBSOLETE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>