force-app/main/default/objects/Account/fields/fw1__Opt_Out_Auto_BillPay__c.field-meta.xml
<CustomField>
    <fullName>fw1__Opt_Out_Auto_BillPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out Auto BillPay</label>
    <type>Checkbox</type>
</CustomField>