force-app/main/default/objects/Account/fields/fw1__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>fw1__SLASerialNumber__c</fullName>
    <label>zSLA Serial Number - OBSOLETE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>