force-app/main/default/objects/Account/fields/fw1__Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>