force-app/main/default/objects/Account/fields/fw1__Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Paid_Amount__c</fullName>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>