force-app/main/default/objects/Account/fields/Goods_Services_of_Organization__c.field-meta.xml
<CustomField>
    <fullName>Goods_Services_of_Organization__c</fullName>
    <label>Goods &amp; Services of Organization</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>