force-app/main/default/objects/Account/fields/Government_Agency__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency__c</fullName>
    <label>Government Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Government_Agency</valueSetName>
    </valueSet>
</CustomField>