force-app/main/default/objects/Account/fields/Government_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Government_Contracts__c</fullName>
    <label>Government Contracts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Government_Contracts</valueSetName>
    </valueSet>
</CustomField>