force-app/main/default/objects/Account/fields/Headquarter_Location__c.field-meta.xml
<CustomField>
    <fullName>Headquarter_Location__c</fullName>
    <label>Headquarter Location</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>