force-app/main/default/objects/Account/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturer</valueSetName>
    </valueSet>
</CustomField>