force-app/main/default/objects/Account/fields/Member_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Member_Advisor__c</fullName>
    <label>Member Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brian Rice</fullName>
            </value>
            <value>
                <fullName>Dale Brosius</fullName>
            </value>
            <value>
                <fullName>Jason Gibson</fullName>
            </value>
            <value>
                <fullName>Joe Fox</fullName>
            </value>
            <value>
                <fullName>Kim Hoodin</fullName>
            </value>
            <value>
                <fullName>Ray Boeman</fullName>
            </value>
            <value>
                <fullName>Uday Vaidya</fullName>
            </value>
            <value>
                <fullName>Vlastimil Kunc</fullName>
            </value>
            <value>
                <fullName>Sierra Noe</fullName>
            </value>
            <value>
                <fullName>Mike Kubacki</fullName>
            </value>
            <value>
                <fullName>David Snowberg</fullName>
            </value>
            <value>
                <fullName>David Okonski</fullName>
            </value>
            <value>
                <fullName>Greg Harrell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>