force-app/main/default/objects/Account/fields/Membership_Form_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Form_Completed_Date__c</fullName>
    <label>Membership Form Completed Date</label>
    <type>Date</type>
</CustomField>