force-app/main/default/objects/Account/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IACMI_Membership_Type</valueSetName>
    </valueSet>
</CustomField>