force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <label>NAICS Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>