force-app/main/default/objects/Account/fields/Non_Profit_Serving__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Serving__c</fullName>
    <label>Non-Profit Serving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Non_Profit_Serving</valueSetName>
    </valueSet>
</CustomField>