force-app/main/default/objects/Account/fields/Organization_Size__c.field-meta.xml
<CustomField>
    <fullName>Organization_Size__c</fullName>
    <inlineHelpText>This comes from the Membership Form.</inlineHelpText>
    <label>Membership Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization_Size</valueSetName>
    </valueSet>
</CustomField>