force-app/main/default/objects/Account/fields/Parent_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization_Name__c</fullName>
    <label>Parent Organization Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>