force-app/main/default/objects/Account/fields/Reason_for_Termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Termination__c</fullName>
    <inlineHelpText>Select the reason for termination</inlineHelpText>
    <label>Reason for Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Difficulties</fullName>
            </value>
            <value>
                <fullName>Reorganization/Buy out</fullName>
            </value>
            <value>
                <fullName>Member Value Not Sufficient</fullName>
            </value>
            <value>
                <fullName>Unknown/Other</fullName>
            </value>
            <value>
                <fullName>Legacy contact left company/Turn over</fullName>
            </value>
            <value>
                <fullName>Loss of funding/project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>