force-app/main/default/objects/Account/fields/School_type__c.field-meta.xml
<CustomField>
    <fullName>School_type__c</fullName>
    <description>Choices for ACE Fall 2021 contact&apos;s school type</description>
    <label>School type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Community College (two-year)</fullName>
            </value>
            <value>
                <fullName>University (four-year)</fullName>
            </value>
            <value>
                <fullName>Not currently in school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>