force-app/main/default/objects/Account/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>