force-app/main/default/objects/Account/fields/Start_Date_of_New_Member__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_New_Member__c</fullName>
    <label>Start Date of New Member</label>
    <type>Date</type>
</CustomField>