force-app/main/default/objects/Account/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <inlineHelpText>Enter the effective date of the membership termination</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>