force-app/main/default/objects/Account/fields/Termination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notes__c</fullName>
    <description>Notes for when members leave to collect important information</description>
    <label>Termination Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>