force-app/main/default/objects/Account/fields/Total_US_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_US_Employees__c</fullName>
    <inlineHelpText>This comes from the Membership form.</inlineHelpText>
    <label>Total US Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Total_Employees</valueSetName>
    </valueSet>
</CustomField>