force-app/main/default/objects/Account/listViews/Accounts_with_Termination_Dates.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Termination_Dates</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Full_Legal_Name__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Termination_Date__c</columns>
    <columns>Reason_for_Termination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Former Member</value>
    </filters>
    <label>Accounts with Termination Dates</label>
</ListView>