force-app/main/default/objects/Account/listViews/Tony_Community_College_Trade_Sports.listView-meta.xml
<ListView>
    <fullName>Tony_Community_College_Trade_Sports</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>List_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>List_Name__c</field>
        <operation>equals</operation>
        <value>Tony Community College Trade Sports</value>
    </filters>
    <label>Tony Community College Trade Sports</label>
</ListView>